--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Cestovka</title>
 </head>
 <body>
@@ -23,8 +23,8 @@
         </ul>
     </header>
 
-    <div class="products-grid1">
-        <div class="product product--img-palmy">
+    <div class="products-grid">
+        <div class="product product--img-palmy product--main">
             <div class="product__price">17 600 Kč</div>
             <div class="product__align">
                 <p class="product__header">Pohoda pod palmami</p>
@@ -33,11 +33,11 @@
         </div>
         <div class="product product--img-jezero">
             <p class="product__price">8 490 Kč</p>
-            <p class="product__header">Klid u jezera</p>
+            <p class="product__header product__header--small">Klid u jezera</p>
         </div>
         <div class="product product--img-nakole">
             <p class="product__price">4 990 Kč</p>
-            <p class="product__header">Výlet na kole</p>
+            <p class="product__header product__header--small">Výlet na kole</p>
         </div>
     </div>
 
@@ -74,19 +74,21 @@
 
     <h2>Last minute zájezdy</h2>
 
-    <div class="products-grid2">
-        <div class="product product--img-lodicka">
+    <div class="products-grid">
+        <div class="product product--img-lodicka product--main">
             <p class="product__price">15 900 Kč</p>
-            <p class="product__header">Romantika u horského jezera</p>
-            <p class="product__content">Dechberoucí výhledy na horské štíty a zrcadlovou hladinu jezera.</p>
+            <div class="product__align">
+                <p class="product__header">Romantika u horského jezera</p>
+                <p class="product__content">Dechberoucí výhledy na horské štíty a zrcadlovou hladinu jezera.</p>
+            </div>
         </div>
         <div class="product product--img-podkova">
             <p class="product__price">18 500 Kč</p>
-            <p class="product__header">Grand Canyon</p>
+            <p class="product__header product__header--small">Grand Canyon</p>
         </div>
         <div class="product product--img-zatoka">
             <p class="product__price">8 900 Kč</p>
-            <p class="product__header">Pěšky po Kanárských ostrovech</p>
+            <p class="product__header product__header--small">Pěšky po Kanárských ostrovech</p>
         </div>
     </div>
 
@@ -110,8 +112,8 @@
         </div>
     </div>
 
-    <footer>
-        <p>©2021, Czechitas</p>
+    <footer class="footer">
+        <p class="footer__content">©2021, Czechitas</p>
     </footer>
 
 </body>
